# GPR5100_Rollback

./: CMakeLists.txt  vcpkg.json
core/: CMakeLists.txt
core/include/engine/: component.h  engine.h  entity.h  globals.h  graphics.h  system.h  transform.h
core/include/graphics/: color.h  graphics.h  sprite.h
core/include/maths/: angle.h  basic.h  vec2.h
core/include/utils/: action_utility.h  assert.h  filesystem.h
core/src/engine/: engine.cpp  entity.cpp  transform.cpp
core/src/graphics/: sprite.cpp
core/src/maths/: vec2.cpp
core/src/utils/: filesystem.cpp  log.cpp
core/test/: test_angle.cpp  test_component.cpp
doc/: doxygen.config  index_page.cpp  index_page.txt
game/: CMakeLists.txt
game/include/game/: bullet_manager.h  game_globals.h  game_manager.h  input_manager.h  physics_manager.h  player_character.h  rollback_manager.h
game/include/network/: app.h  client.h  client_debug_app.h  debug_db.h  full_debug_app.h  network_client.h  network_server.h  packet_type.h  server.h  simulation_app.h  simulation_client.h  simulation_server.h
game/main/: client.cpp  server.cpp
game/src/game/: bullet_manager.cpp  game_manager.cpp  input_manager.cpp  physics_manager.cpp  player_character.cpp  rollback_manager.cpp  star_background.cpp
game/src/network/: client.cpp  client_app.cpp  client_debug_app.cpp  debug_db.cpp  full_debug_app.cpp  network_client.cpp  network_client_debug_app.cpp  network_server.cpp  server.cpp  simulation_app.cpp  simulation_client.cpp  (+1 more)
main/: CMakeLists.txt  debug_client.cpp  server.cpp
main/shmup/: CMakeLists.txt
